<resources>
    <string name="app_name">QuickBloxChat</string>
    <string name="search">Search</string>
    <string name="new_chat">New chat</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="video_call">Video call</string>
    <string name="contact">Contact</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="mute">Mute</string>
    <string name="tin_nhan">Tin nhắn</string>
    <string name="off_cam">Off cam</string>
    <string name="end_call">End call</string>
    <string name="share_screen">Share screen</string>
    <string name="swap_cam">Swap cam</string>
</resources>